# vanvitelli

./: Cargo.toml  docker-compose.yaml
src/: events.rs  gatherers.rs  main.rs
src/events/: policy.rs  protobuf_events_policy.rs  rabbitmq_consumer.rs
src/gatherers/: facts.rs  registry.rs
