[package]
name = "vanvitelli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amqprs = "1.5.1"
trento-contracts = { git="https://github.com/trento-project/contracts.git", branch="rust_stubs"}
tokio = { version = "1.33.0", features = ["full"] }
async-trait = "0.1.74"
protobuf-json-mapping = "3.3.0"
anyhow = "1.0.75"
thiserror = "1.0.50"
log = "0.4.20"
env_logger = "0.10.0"
serde_json = "1.0.108"
serde = "1.0.192"
mockall = "0.11.4"
